# CorsarioxXx

./: README.md  pyproject.toml
src/corsarioxxx/: adb_ops.py  auth.py  cli.py  config.py  file_ops.py  git_ops.py  graceful_shutdown.py  llm.py  memory.py  permissions.py  router.py  runtime.py  session_db.py  tools.py
src/corsarioxxx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_adb_ops.py  test_auth.py  test_file_ops.py  test_git_ops.py  test_memory.py  test_permissions.py  test_router.py
