[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "corsarioxxx"
version = "0.1.0"
description = "Terminal-first local assistant for sr71n3."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "sr71n3" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
corsarioxxx = "corsarioxxx.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
